huge update, first funcs in main.go, made yaml files for K8S, updated proto files and generated files.
